apps/production/matomo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
        - name: matomo
          image: matomo:latest@sha256:70b23dfb55d25a32538009f75a0222adf2322515b626512a9228c1b97e51b020
          ports:
            - containerPort: 80
          volumeMounts:
            - name: matomo-data
              mountPath: /var/www/html
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: matomo-data
          persistentVolumeClaim:
            claimName: matomo-pvc
