apps/production/matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  type: ClusterIP
  selector:
    app: matomo
  ports:
    - name: http
      port: 80
      targetPort: 80
